[build-system]
requires = ["setuptools>=62.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ptxprint"
authors = [{name = "SIL", email = "fonts@sil.org"}]
readme = "README.md"
license = {file = "python/LICENSE.txt"}
description = "USFM based Bible typesetting (Xe)TeX based application"
classifiers = [
   "Environment :: X11 Applications :: GTK",
   "Programming Language :: Python :: 3.8",
   "Intended Audience :: End Users/Desktop",
   "License :: OSI Approved :: MIT License",
   "Topic :: Text Processing :: General"
   ]
requires-python = ">=3.8"
dynamic = ["version"]

dependencies = [
"usfmtc",
"regex",
"fonttools",
"appdirs",
"Pillow",
"numpy"
]

[project.optional-dependencies]
git = [ ]
gui = ["pygobject", "pycairo"]

[project.urls]
Home-Page = "https://github.com/sillsdev/ptx2pdf"

[tool.setuptools]
zip-safe = false

[tool.setuptools.package-dir]
"ptxprint" = "python/lib/ptxprint"
"ptxprint.ptx2pdf" = "src"
"ptxprint.xetex.texmf-var" = "xetex/texmf-var"
"ptxprint.xetex.texmf-dist" = "xetex/texmf-dist"

[tool.setuptools.package-data]
"ptxprint.ptx2pdf" = ["*"]

[tool.setuptools.dynamic]
version = {attr = "ptxprint.view.VersionStr"}

[tool.bdist_wheel]
universal = true

[project.scripts]
ptxprint = "ptxprint.main:main"
pdfdiff = "ptxprint.pdf.pdfdiff:main"
xdvitype = "ptxprint.xdv.xdvtype:main"
