[build-system]
requires = ["setuptools>=62.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ptxprint"
authors = [{name = "SIL", email = "fonts@sil.org"}]
readme = "README.md"
# Remove license with a plague on all their houses until all support PEP 639
# Since that will take until 24.04 is end of life, that means 2029. Well done
# PYPA!
#license = {"file": "python/LICENSE.txt"}
#license = "MIT"        # and remove License classifier
#license-files = ["python/LICENSE.txt"]
description = "USFM based Bible typesetting (Xe)TeX based application"
classifiers = [
   "Environment :: X11 Applications :: GTK",
   "Programming Language :: Python :: 3.8",
   "Intended Audience :: End Users/Desktop",
   "License :: OSI Approved :: MIT License",
   "Topic :: Text Processing :: General"
   ]
requires-python = ">=3.8"
dynamic = ["version"]

dependencies = [
"usfmtc @ https://github.com/usfm-bible/usfmtc/archive/main.zip",
"regex",
"fonttools",
"appdirs",
"Pillow",
"numpy"
]

[project.optional-dependencies]
git = [ ]
gui = ["pygobject", "pycairo"]

[project.urls]
Home-Page = "https://github.com/sillsdev/ptx2pdf"

[tool.setuptools]
zip-safe = false
include-package-data = true     # implicit

[tool.setuptools.packages.find]
where = ["python/lib"]
namespaces = true       # implicit

[tool.setuptools.package-dir]
"" = "python/lib"

[tool.setuptools.package-data]
"ptxprint" = ["ptx2pdf/**/*", "xetex/**/*"]

[tool.setuptools.dynamic]
version = {attr = "ptxprint.view.VersionStr"}

[tool.bdist_wheel]
universal = true

[project.scripts]
ptxprint = "ptxprint.main:main"
pdfdiff = "ptxprint.pdf.pdfdiff:main"
xdvitype = "ptxprint.xdv.xdvtype:main"
