[build-system]
requires = ["setuptools>=62.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ptxprint"
authors = [{name = "SIL", email = "fonts@sil.org"}]
readme = "README.md"
description = "USFM based Bible typesetting (Xe)TeX based application"
classifiers = [
   "Environment :: X11 Applications :: GTK",
   "Programming Language :: Python :: 3.8",
   "Intended Audience :: End Users/Desktop",
   "License :: OSI Approved :: MIT License",
   "Topic :: Text Processing :: General"
   ]
requires-python = ">=3.8"
# commented out dynamic versioning for now
# dynamic = ["version"]
version = "2.9.3"

dependencies = [
"usfmtc @ https://github.com/usfm-bible/usfmtc/archive/main.zip",
"regex",
"fonttools",
"appdirs",
"Pillow",
"numpy"
]

[project.optional-dependencies]
git = [ ]
gui = ["pygobject", "pycairo"]

[project.urls]
Home-Page = "https://github.com/sillsdev/ptx2pdf"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["python/lib"]
namespaces = true

[tool.setuptools.package-dir]
"" = "python/lib"

[tool.setuptools.package-data]
"ptxprint" = ["ptx2pdf/**/*", "xetex/**/*"]

# comment this out for now
#[tool.setuptools.dynamic]
#version = {attr = "ptxprint.view.VersionStr"}

[tool.bdist_wheel]
universal = true

[project.scripts]
ptxprint = "ptxprint.main:main"
pdfdiff = "ptxprint.pdf.pdfdiff:main"
xdvitype = "ptxprint.xdv.xdvtype:main"
